fix dark mode drop shadow

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -167,7 +167,7 @@ body {
         --border--primary: var(--grey-xdark);
         --border--secondary: var(--grey-dark);
 
-        --shadow--drop-primary: drop-shadow(0px 0px 4px var(--border--primary));
+        --shadow--drop-primary: drop-shadow(0px 0px 4px var(--black));
     
         --text--primary: var(--grey-medium);
         --text--inverse: var(--black);
